--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,8 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+@import './general.css';
+@import './variables.css';
+@import './index.css';
+@import './register.css';
+@import './login.css';
+@import './productDetail.css';
+@import './productCart.css'; 
 
-a {
-  color: #00B7FF;
-}
