--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
     <title>Craftsy | Home</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
-<body>
+<body class="home">
     
 </body>
 </html>
