--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Craftsy | Home</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
+
 <body>
-    
+    <header>
+        <a href="/"> <img class="header__logo" src="/images/logo (1).png" alt="" /></a>
+        <nav class="header__menu">
+            <ul class="header__menu__sitio">
+                <li><a href="">Smartphone</a></li>
+                <li><a href="">Tablet</a></li>
+                <li><a href="">Computadoras</a></li>
+            </ul>
+            <ul class="header__menu__usuarios">
+                <li><a href="/register">Register</a></li>
+                <li><a href="/login">Login</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
