--- a/views/productCart.html
+++ b/views/productCart.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    
+    <header>
+        <a href="/"> <img class="header__logo" src="/images/logo (1).png" alt="" /></a>
+        <nav class="header__menu">
+            <ul class="header__menu__sitio">
+                <li><a href="">Smartphone</a></li>
+                <li><a href="">Tablet</a></li>
+                <li><a href="">Computadoras</a></li>
+            </ul>
+            <ul class="header__menu__usuarios">
+                <li><a href="/register">Register</a></li>
+                <li><a href="/login">Login</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
